--- a/main.tex
+++ b/main.tex
@@ -676,14 +676,20 @@ Firstly, we perform a Cross Validation for 5 to 10 folds for the assumed optimal
 \end{figure}
 
 
-From Figure (\ref{fig:mse_cv_ridge_1}), we can see that the cross-validated MSE gains a lower value than that of the search grid. Also, as was seen in the previous section when studying Cross Validation, the prediction error is less varying than the bootstrap prediction error. However, at least for a model with complexity to the sixth-order. There is overlap between the bootstrap and cross-validation standard error, thus the bootstrap could potentially achieve better MSE than Cross Validation.
+From Figure (\ref{fig:mse_cv_ridge_1}), we can see that the cross-validated MSE gains a similar value as seen from the search grid. Moreover, the standard deviation is consitantly low, and shows signs of the model being generalized and robust to the data given the hyperparameters. The bootstrap MSE is significantly higer. However, the bootstrap MSE value stems for scaling using different data than the cross validation relative to the different nature of the two algorithms. Therefore, it can be debateble to which degree the MSE for bootstrap and cross validation are comparable. However, we see that the bootstrap MSE is not contained within the standard error of any K-folds.
 
-Figure (\ref{fig:mse_cv_ridge_2}) plots cross validation for the same degree, but with the maximum level of regularization $\lambda = 10^4$. With a high amount of regularization, the standard error for cross validation prediction error is highly varying. Also the cross validation prediction error is consequently larger than for the bootstrap prediction error. Based on the uncertainty of the cross validation with a high amount of regularization, it is difficult to use the measurement as it is too imprecise. The standard error does however never overlap with the cross validation range in Figure (\ref{fig:mse_cv_ridge_1}). Thus it can be concluded that for a high amount of regularization, the model is not generalized and does not achieve a sufficiently low prediction error.
+Figure (\ref{fig:mse_cv_ridge_2}) plots cross validation for the same degree, but with increased level of regularization $\lambda = 2.15e^{-05}$. Using a slighty higher level of regularization, the standard error for cross validation prediction error starts to increase. However, the cross validated MSE looks to be relativly equal to whats show in Figure (\ref{fig:mse_cv_ridge_1}). We also see that the bootstrap MSE is closer to the cross validated MSE.
 
-On the other hand, with very slight regularization, as in Figure (\ref{fig:mse_cv_ridge_1}), the model generalizes well with a relatively low MSE score. Moreover, the prediction error for cross validation seem to achieve the same values as the cross validation for OLS in Figure (\ref{fig:ols_cv_1}). Though this is to be expected as the regularization is minimal. Increasing the regularization as in Figure (\ref{fig:mse_cv_ridge_2}) and (\ref{fig:mse_cv_ridge_3}), the standard error of the predicted MSE seem to increase as well. Though this is not seen before Figure (\ref{fig:mse_cv_ridge_3}). There also seem to be a slight relationship between the standard error and number of folds, as both Figure (\ref{fig:mse_cv_ridge_3}) and (\ref{fig:mse_cv_ridge_4}) increase their standard error as folds increase.
+Figure (\ref{fig:mse_cv_ridge_3}) shows an increase in variation for several k-folds when the level of regularization is increased to $\lambda = 4.34e^{-01}$. The cross validates MSE looks to have increased slightly while the bootstrap MSE is significantly closer to the crossvalidated MSE. It seems like bootstrap MSE is positivly affected by the regularization.
 
-Based on the results which have just been discussed, it seems that there may not be a gain in lower prediction error by fitting yhe Franke Function using Ridge instead of OLS. In conclusion, Ridge regression might be outperformed by the OLS when fitting the Franke Function. Though a model with slight regularization can be applied, the results from Ridge regression are either on par or worse than OLS.
+Figure (\ref{fig:mse_cv_ridge_4}) shows the same trend as Figure (\ref{fig:mse_cv_ridge_3}) with increasing standard error and and crossvalidated MSE. However the bootstrap MSE is now tuching the upper boarder of the standard error of the cross validated MSE.
 
+With very slight regularization, as in Figure (\ref{fig:mse_cv_ridge_1}), the model generalizes well with a relatively low MSE score. Moreover, the prediction error for cross validation seem to achieve the same values as the cross validation seen for OLS. Though this is to be expected as the regularization is minimal. Based on the results which have just been discussed, it seems that there may not be a gain in lower prediction error by fitting the Franke Function using Ridge instead of OLS. In conclusion, Ridge regression might be outperformed by the OLS when fitting the Franke Function. Though a model with slight regularization can be applied, the results from Ridge regression are either on par or worse than OLS.
+
+
+%Thus it can be concluded that for a high amount of regularization, the model is not generalized and does not achieve a sufficiently low prediction error.
+%There is overlap between the bootstrap and cross-validation standard error, thus the bootstrap could potentially achieve better MSE than Cross Validation.
+%Based on the uncertainty of the cross validation with a high amount of regularization, it is difficult to use the measurement as it is too imprecise
 \section*{Exercise 5}
 The second regularized linear model which we will study is Least Absolute Shrinkage and Selection Operator (LASSO) Regression. Lasso adds a regularization term to the Cost function similarly to Ridge regression, though Lasso utilizes the L1 norm of the predictors instead of the L2 as in Ridge. \cite{Geron2019} Mathematically, adding the L1 regularizer gives us the following Cost function
 \[
