finished 5, search lands for 6

--- a/code/Exercise6.ipynb
+++ b/code/Exercise6.ipynb
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
+    "import matplotlib.ticker as mticker\n",
     "import seaborn as sns\n",
     "import os\n",
     "from common import *\n",
@@ -660,42 +661,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.random.seed(4155)\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "degree = 8\n",
+    "degree = 14\n",
     "min_lambda = -9\n",
     "max_lambda = 4\n",
     "nlambdas = 500\n",
     "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
     "\n",
-    "z_train_OLS = pd.DataFrame()\n",
-    "z_hat_train_OLS = pd.DataFrame()\n",
-    "z_test_OLS = pd.DataFrame()\n",
-    "z_hat_test_OLS = pd.DataFrame()\n",
+    "test_mse = np.zeros((degree, nlambdas))\n",
+    "train_mse = np.zeros_like(test_mse)\n",
+    "model_list = np.empty_like(test_mse, dtype=object)\n",
+    "optimal_deg = 0\n",
+    "optimal_lmb = 0\n",
+    "lambda_degree = 0\n",
+    "best_mse = np.inf\n",
     "\n",
-    "X = create_X(x,y,degree)\n",
-    "X_train, X_test, t_train, t_test = prepare_data(X,z_flat, 4155, scale_X=True, scale_t=True)\n",
+    "for deg in range(1, degree+1):\n",
+    "    for lmb in range(len(lambdas)):\n",
     "\n",
-    "MSERidgePredict = np.zeros(nlambdas)\n",
-    "MSEOurRidge = np.zeros(nlambdas)\n",
-    "MSEsklearn = np.zeros(nlambdas)\n",
-    "lambdas = np.logspace(min_lambda, max_lambda, nlambdas)\n",
-    "for i in range(nlambdas):\n",
-    "    lmb = lambdas[i]\n",
+    "        X = create_X(x,y,n=deg)\n",
     "\n",
-    "    # our Ridge\n",
-    "    model = RidgeRegression(lmb)\n",
-    "    z_hat_train = model.fit(X_train, t_train)\n",
-    "    z_hat_test = model.predict(X_test)\n",
-    "    MSEOurRidge[i] = MSE(t_test, z_hat_test)\n",
-    "    MSEsklearn[i] = mean_squared_error(t_test, z_hat_test)\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, z_flat, 4155, scale_X=True, scale_t=True, skip_intercept=True)\n",
     "\n",
-    "plt.figure()\n",
-    "plt.plot(np.log10(lambdas), MSEsklearn, 'm', label = \"MSE Ridge\")\n",
-    "plt.xlabel('log10(lambda)')\n",
-    "plt.ylabel('MSE')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "        model = RidgeRegression(lambdas[lmb])\n",
+    "        z_hat_train = model.fit(X_train, z_train)\n",
+    "        z_hat_test = model.predict(X_test)\n",
+    "\n",
+    "        test_mse[deg-1,lmb] = MSE(z_test, z_hat_test)\n",
+    "        train_mse[deg-1, lmb] = MSE(z_train, z_hat_train)\n",
+    "        model_list[deg-1,lmb] = model\n",
+    "        \n",
+    "        if test_mse[deg-1,lmb] < best_mse:\n",
+    "            best_mse = test_mse[deg-1, lmb]\n",
+    "            optimal_deg = deg\n",
+    "            optimal_lmb = lambdas[lmb]\n",
+    "            lambda_degree = lmb\n",
+    "\n",
+    "print(best_mse)\n",
+    "print(optimal_lmb)\n",
+    "print(optimal_deg)\n",
+    "print(train_mse[deg-1, lmb])\n",
+    "optimal_model = model_list[deg-1, lambda_degree]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.title.set_text(\"Plot of the Search Landscape\")\n",
+    "ax.set_xlabel(\"Polynomial degree\"); ax.set_ylabel(\"Lambda index\"); ax.set_zlabel(\"MSE\")\n",
+    "#ax.set_yticklabels(f\"{np.log10(lambdas[i])}\" for i in np.linspace(0,499,6,dtype=int))\n",
+    "ax.set_xticklabels(f\"{deg-2}\" for deg in range(1, degree+2,2))\n",
+    "degs, lambs = np.meshgrid(range(degree), range(nlambdas))\n",
+    "print(degs.shape)\n",
+    "print(lambs.shape)\n",
+    "print(test_mse.shape)\n",
+    "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
+    "ax.view_init(elev=14., azim=-58.)\n",
+    "ax.scatter(optimal_deg-1, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX6}search_landscape_ridge.pdf\")"
    ]
   },
   {
@@ -785,6 +813,96 @@
    "metadata": {},
    "source": [
     "## 6.5.1 Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from warnings import simplefilter\n",
+    "from sklearn.exceptions import ConvergenceWarning\n",
+    "simplefilter(\"ignore\", category=ConvergenceWarning)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Search Landscape Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degree = 14\n",
+    "min_lambda = -7\n",
+    "max_lambda = 2\n",
+    "nlambdas = 100\n",
+    "lambdas = np.logspace(min_lambda,max_lambda, nlambdas)\n",
+    "\n",
+    "test_mse = np.zeros((degree, nlambdas))\n",
+    "train_mse = np.zeros_like(test_mse)\n",
+    "model_list = np.empty_like(test_mse, dtype=object)\n",
+    "optimal_deg = 0\n",
+    "optimal_lmb = 0\n",
+    "lambda_degree = 0\n",
+    "best_mse = np.inf\n",
+    "\n",
+    "for deg in range(1, degree+1):\n",
+    "    for lmb in range(len(lambdas)):\n",
+    "\n",
+    "        X = create_X(x,y,n=deg)\n",
+    "\n",
+    "        X_train, X_test, z_train, z_test = prepare_data(X, z_flat, 4155, scale_X=True, scale_t=True, skip_intercept=True)\n",
+    "\n",
+    "        model = lm.Lasso(lambdas[lmb], fit_intercept=False, random_state=4155)\n",
+    "        model.fit(X_train, z_train)\n",
+    "        z_hat_train = model.predict(X_train)\n",
+    "        z_hat_test = model.predict(X_test)\n",
+    "\n",
+    "        test_mse[deg-1,lmb] = MSE(z_test, z_hat_test)\n",
+    "        train_mse[deg-1, lmb] = MSE(z_train, z_hat_train)\n",
+    "        model_list[deg-1,lmb] = model\n",
+    "        \n",
+    "        if test_mse[deg-1,lmb] < best_mse:\n",
+    "            best_mse = test_mse[deg-1, lmb]\n",
+    "            optimal_deg = deg\n",
+    "            optimal_lmb = lambdas[lmb]\n",
+    "            lambda_degree = lmb\n",
+    "\n",
+    "print(best_mse)\n",
+    "print(optimal_lmb)\n",
+    "print(optimal_deg)\n",
+    "print(train_mse[deg-1, lmb])\n",
+    "optimal_model = model_list[deg-1, lambda_degree]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "ax.title.set_text(\"Plot of the Search Landscape\")\n",
+    "ax.set_xlabel(\"Polynomial degree\"); ax.set_ylabel(\"Lambda index\"); ax.set_zlabel(\"MSE\")\n",
+    "#ax.set_yticklabels(f\"{np.log10(lambdas[i])}\" for i in np.linspace(0,499,6,dtype=int))\n",
+    "ax.set_xticklabels(f\"{deg-2}\" for deg in range(1, degree+2,2))\n",
+    "degs, lambs = np.meshgrid(range(degree), range(nlambdas))\n",
+    "print(degs.shape)\n",
+    "print(lambs.shape)\n",
+    "print(test_mse.shape)\n",
+    "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
+    "ax.view_init(elev=14., azim=-58.)\n",
+    "ax.scatter(optimal_deg-1, lambda_degree, best_mse, c='r', marker='o', s=100)\n",
+    "plt.savefig(f\"{REPORT_FIGURES}{EX6}search_landscape_lasso.pdf\")"
    ]
   },
   {
@@ -1103,10 +1221,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -1119,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
