--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -71,7 +71,7 @@
     "ax1.set_zlim(-0.10, 1.40)\n",
     "ax1.zaxis.set_major_locator(LinearLocator(10))\n",
     "ax1.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_nonoise_preview.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_nonoise_preview.pdf\")\n",
     "\n",
     "# Ploting frankefunction with noise\n",
     "fig = plt.figure()\n",
@@ -84,7 +84,7 @@
     "ax2.set_zlim(-0.10, 1.40)\n",
     "ax2.zaxis.set_major_locator(LinearLocator(10))\n",
     "ax2.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_noise_preview.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_noise_preview.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -156,7 +156,7 @@
     "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\n",
     "fig.suptitle(\"OLS fit to the Franke Function\")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_fit.pdf\")\n",
+    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_fit.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -287,19 +287,6 @@
     "\n",
     "    betas_svd = model.get_all_betas\n",
     "\n",
-    "        \n",
-    "    # Printing results\n",
-    "    \"\"\"\n",
-    "    print(f\"Degree: {degree}\")\n",
-    "    print(f\"Train data - Mean Square Error: {MSE_score_train}\")\n",
-    "    print(f\"Train data - R2 score: {R2_score_train}\")\n",
-    "    print(f\"Test data - Mean Square Error: {MSE_score_test}\")\n",
-    "    print(f\"Test data - R2 score: {R2_score_test}\")\n",
-    "    print(f\"Estimated variance: {var_hat}\")\n",
-    "    print(f\"Beta - values{betas}\")\n",
-    "    print(f\"Beta - Std Errors: {SE_betas}\")\n",
-    "    print(f\"Beta - Confidence Interval (CI):\\n{CL}\\n\")\n",
-    "    \"\"\"\n",
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
@@ -366,52 +353,8 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_1.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_1.pdf\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.4 Analysis of plots and training metrics\n",
-    "Do the analysis.......\n",
-    "\n",
-    "Conclusion:<br>\n",
-    "Based on the analysis, we conclude that a model complexity of degree 5 yields the most optimal fit."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.5 plot of the model using the most optimal parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "optimal_degree = 5\n",
-    "X = create_X(x, y, optimal_degree) # Design Matrix\n",
-    "model = OLS() # The model\n",
-    "model.fit(X, z.ravel()) # Fitting the model\n",
-    "z_hat = model.predict(X) # predict on train data\n",
-    "\n",
-    "# Plot\n",
-    "fig = plt.figure()#figsize=(8,8))\n",
-    "ax = plt.axes(projection='3d')\n",
-    "ax.title.set_text(f\"OLS regression fit to the Franke Function\\noptimal degree {optimal_degree},\")\n",
-    "#ax.view_init(elev=5., azim=85.0)\n",
-    "ax.view_init(elev=30., azim=-25.0)\n",
-    "ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\n",
-    "ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_best_fit.pdf\")\n",
-    "plt.show()\n",
-    "\"\"\""
    ]
   },
   {
@@ -432,7 +375,7 @@
     "    display(degree_coeffs)\n",
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
     "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
-    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")"
+    "    # fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}.pdf\")"
    ]
   },
   {
@@ -542,19 +485,6 @@
     "\n",
     "    betas_svd = model.get_all_betas\n",
     "\n",
-    "        \n",
-    "    # Printing results\n",
-    "    \"\"\"\n",
-    "    print(f\"Degree: {degree}\")\n",
-    "    print(f\"Train data - Mean Square Error: {MSE_score_train}\")\n",
-    "    print(f\"Train data - R2 score: {R2_score_train}\")\n",
-    "    print(f\"Test data - Mean Square Error: {MSE_score_test}\")\n",
-    "    print(f\"Test data - R2 score: {R2_score_test}\")\n",
-    "    print(f\"Estimated variance: {var_hat}\")\n",
-    "    print(f\"Beta - values{betas}\")\n",
-    "    print(f\"Beta - Std Errors: {SE_betas}\")\n",
-    "    print(f\"Beta - Confidence Interval (CI):\\n{CL}\\n\")\n",
-    "    \"\"\"\n",
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
@@ -616,7 +546,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
+    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -635,7 +565,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
+    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -650,16 +580,16 @@
     "    display(degree_coeffs)\n",
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
     "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
-    "    fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
+    "    #fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -672,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
