added figs, cleaned notebook1

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -156,7 +156,7 @@
     "    ax.scatter3D(y, x, z_hat, c=z_hat ,marker = '.', cmap=cm.coolwarm)\n",
     "fig.suptitle(\"OLS fit to the Franke Function\")\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_fit.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_fit.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -485,6 +485,7 @@
     "\n",
     "    betas_svd = model.get_all_betas\n",
     "\n",
+    "    \n",
     "    # Constructing dataframe for beta coefficients\n",
     "    degs = np.zeros(betas.shape[0]); degs.fill(degree)\n",
     "    df = pd.DataFrame.from_dict({\"degree\" :degs,\n",
@@ -546,7 +547,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_OLS_evaluate_fit_dn.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -556,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,8))\n",
+    "# plt.figure(figsize=(12,8))\n",
     "plt.plot(np.arange(1,degrees+1), R2_scores_test, \"r--\", label=\"Test data\")\n",
     "plt.plot(np.arange(1,degrees+1), R2_scores_train, \"y--\", label=\"Training data\")\n",
     "plt.xlabel(\"Model complexity / Polynomial Degree\")\n",
@@ -565,7 +566,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "#plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX1}franke_function_R2.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -580,23 +581,16 @@
     "    display(degree_coeffs)\n",
     "    fig = plot_beta_errors(degree_coeffs, i)\n",
     "    plt.title(f\"Beta error OLS - degree{degree}\\n(noise factor {noise})\")\n",
-    "    #fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
+    "    # fig.savefig(f\"{REPORT_FIGURES}{EX1}OLS_beta_error_degree{i}_mn.pdf\")"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-<<<<<<< HEAD
    "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
   },
   "kernelspec": {
    "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
-=======
-   "hash": "4100b45d1ec7c24b8fe1569d39871ffb9fcc213dcc50046fc68fe247fbf6e84f"
-  },
-  "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('pytorch1': conda)",
->>>>>>> 3413127757627c1b5d1c2bff3c675be61350b203
    "name": "python3"
   },
   "language_info": {
@@ -609,11 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.9.6"
-=======
-   "version": "3.8.11"
->>>>>>> 3413127757627c1b5d1c2bff3c675be61350b203
   }
  },
  "nbformat": 4,
