added figs, cleaned notebooks, added readme

--- a/code/Exercise5.ipynb
+++ b/code/Exercise5.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "surf = ax.plot_surface(degs, lambs, test_mse.swapaxes(0,1), cmap=cm.coolwarm)\n",
     "ax.view_init(elev=14., azim=-58.)\n",
-    "plt.savefig(f\"{REPORT_FIGURES}{EX5}search_landscape_lasso.pdf\")\n",
+    "# plt.savefig(f\"{REPORT_FIGURES}{EX5}search_landscape_lasso.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -211,7 +211,7 @@
     "        plt.xticks(polydegree)\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_complexity_using_bootstrap_function_lmb{n}{i}.pdf\")\n",
+    "        # plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_complexity_using_bootstrap_function_lmb{n}{i}.pdf\")\n",
     "        plt.show()"
    ]
   },
@@ -271,7 +271,7 @@
     "        plt.xticks(np.arange(5,11))\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_mse_cv_boot{i}{degree}.pdf\")\n",
+    "        # plt.savefig(f\"{REPORT_FIGURES}{EX5}lasso_mse_cv_boot{i}{degree}.pdf\")\n",
     "\n",
     "        plt.show()"
    ]
@@ -279,10 +279,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -295,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
