--- a/main.tex
+++ b/main.tex
@@ -161,7 +161,7 @@ For consistency, it is noted that $\bm{\hat{\beta}} \in \mathbb{R}^p$, $\bm{y} \
 
 With an expression for the predictors $\hat{\beta}$ derived, fitting a new value $\tilde{y}$ is simply $\tilde{y} = \bm{X}\bm{\hat{\beta}}$.
 
-Our own implementation of Ordinary Least Square regression is implemented such that its use mimics that of SciKit-learn. \cite{scikit-learn} That is, we also include separate steps for initializing our model, fitting the model and predicting using the model using the just derived mathematical expression. For further inquiry about implementation, refer to the github repository linked in the \nameref{sec:A}.
+Our own implementation of Ordinary Least Square regression is implemented such that its use mimics that of SciKit-learn. \cite{scikit-learn} That is, we also include separate steps for initializing our model, fitting the model and predicting using the model using the just derived mathematical expression. For further inquiry about implementation, refer to the github repository.
 
 \subsection*{Confidence Intervals}
 Confidence intervals can be used to asses the uncertainty of a parameter. In our case, we will define confidence limits following the understanding of a Confidence Interval given in "Bootstrap Methods and their Application". That is, given a computed confidence region, any value inside the confidence region should be more likely than all values outside the confidence region. \cite{Davison1997}
@@ -183,10 +183,6 @@ The R2 score (coefficient of determination) is another metric that can be relate
 \[
   \text{R}^2(\boldsymbol{y}, \tilde{\boldsymbol{y}}) = 1 - \frac{\sum_{i=0}^{n - 1} (y_i - \tilde{y}_i)^2}{\sum_{i=0}^{n - 1} (y_i - \bar{y})^2}
 \] the closer the R2 score is to its maximum value 1, the more the variance of the model is explained by the model parameters. The R2 score gives a measure of model skill as a higher R2 generally indicates that the model is better at making new predictions. However, a perfect R2 score of 1 would result in the model covering it's entire variance, thus the model is overfitted and will not perform well in a general use case beyond the scope of it's initial training-data.
-
-\todo[inline]{TODO: Possibly more one implementation}
-\todo[inline]{TODO: Add the plot showing all predicitons up to degree}
-\todo[inline]{TODO: R2 score must be plottet and briefly discussed}
 
 \subsection*{Scaling the data}
 Our motivation for scaling the data arise in the context of fitting a design matrix of predictors with different units. To avoid having to disregard some predictors in favor of others based on their unit, not necessarily their contribution to the function fit, a scaling of the data is performed. By scaling the data using one of several scaling techniques, we ensure that all predictors lie in the same reference domain, resulting in a more accurate representation of the predictors. Furthermore, scaled data generally increases model skill. SciKit-learn includes several different Scalers, such as the StandardScaler and MinMaxScaler. \cite{scikit-learn} For this discussion, the StandardScaler will be inspected.
@@ -859,9 +855,8 @@ For simplicity, let’s consider the image of size 7x7
 with 49 data points (pixels) drawn in figure\ref{fig:image_resizing}. Let's assume you performed a train test split on the 7x7 image resulting in $\{x_0,x_1,x_7,x_8\}$ being contained in the
 training set. Let's assume each pixel value and its $(x,y)$ position counts as the distance of 1, then the Euclidean distance between $x_0$ and its nearest neighbors ($x_1$ and $x_7$) is both 1.
 The distance between $x_0$ and $x_8$ would then be $\sqrt{2}=1.41$.
-\todo[inline]{ADD eclaedan dinstance formula with the values?}
 Three similar pixel values are not much, but this is just an example highlighting the concept, and in real situations you basically get several pixels of very similar values in your training data.
-You can also end up having several pixels in the training set and the test set that are basically equal. It is not ideal to have datapoint in the trainin set and test set that represents the same data point value.
+You can also end up having several pixels in the training set and the test set that are basically equal. It is not ideal to have datapoints in the training set and test set that represents the same data point value.
 Let’s say you resize the 7x7 image down to a 3x3 image by sampling 9 pixels from the original image of 7x7, as illustrated in figure \ref{fig:image_resizing}. Considering the resampled 3x3 image,
 the Euclidean distance between one pixel and its nearest neighbors is not 1 anymore. The distance between pixel (y=0,x=0) and its nearest neighbor (y=0,x=1) and (y=1,x=0)
 in the 3x3 image is now the Euclidean distance between pixel $x_0$ and $x_3$, and $x_0$ and $x_{21}$ from the original image. Therefore, picking pixels from the 3x3 image for the training
@@ -876,10 +871,9 @@ determine overfitting since you basically test on many data points that are clos
 \end{figure}
 
 \newpage
-\subsection*{Exercise 6 - Conclusion and critical model selelction}
+\subsection*{Exercise 6 - Conclusion and critical model selection}
 \subsubsection*{OLS fit}
-\todo[inline]{TODO: Include bias-variance trade-off, fix figure references, include beta plots and compare between degree 10,11 and 12 to determain overfitting}
-In this task we conducted a OLS fit on the the terrain1 patch using similar appraoch as done in exercise1. We fitted the OLS model between degree 1-44.
+In this task we conducted a OLS fit on the the terrain1 patch using similar approach as done in exercise1. We fitted the OLS model between degree 1-44.
 When approximating polynomials, the simpler components are often incorporated within the first coefficients of a model. The simpler components of an approximation
 often carry basic but significantly important information. When tackling the approximation of complex data, more coefficients must contribute in order to capture the
 real data's details, shape, and statistics. However, in approximation, the differences between degrees of complexity are not necessarily linear as it depends on the
@@ -922,11 +916,6 @@ evaluate to produced end product to be certain of which complexity that yields t
 Based on the analyzis we conclude that degree 10 yeilds the best fit for the OLS model having a mean test MSE value of 0.169 and a standard deviation of 0.0075.
 \\\\
 Another intersting observation we though of mentioning is that our models are actualy performing as a type of image or data compression, where the model coefficients contain the information of considerably large terrain data.
-
-\subsubsection*{Ridge fit}
-\todo[inline]{TODO: Ridge conclusion and critical model selelction. Write similar story as done for OLS using surfaceplon}
-\subsubsection*{Lasso fit}
-\todo[inline]{TODO: Lasso conclusion and critical model selelction. Write similar as done for Ridge}
 
 \begin{figure}
   \centering
@@ -991,9 +980,43 @@ Another intersting observation we though of mentioning is that our models are ac
   \label{fig:EX6_1_OLS_3D}
 \end{figure}
 
+\subsubsection*{Applying Ridge and Lasso models}
+Based on the OLS fit obtained from Figure (\ref{fig:EX6_1_OLS_fit}), we create a search landscape for models up to 14th order, as that is where the OLS starts to overfit. We do this for both Ridge and Lasso regression.  
 
-\section*{Appendix\label{sec:A}}
-\textbf{TODO} her skal det ligge link til et github repo.
+\begin{figure}
+  \centering
+  \begin{subfigure}{0.49\textwidth}
+      \centering
+      \hspace*{-3.8cm}
+      \includegraphics[width=\textwidth]{figures/EX6_search_landscape_ridge.pdf}
+      \caption{\label{fig:ridge_search_land_terrain}Plot of the Search Landscape for polynomials up to a certain order initialized with different regularization parameter values. The red dot symbolizes surface minimum.}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}{0.49\textwidth}
+    \centering
+    \hspace*{-3.8cm}
+    \includegraphics[width=\textwidth]{figures/EX6_search_landscape_lasso.pdf}
+    \caption{\label{fig:lasso_search_land_terrain}Plot of the Search Landscape for polynomials up to a certain order initialized with different regularization parameter values. The red dot symbolizes surface minimum.}
+\end{subfigure}
+  \caption{\label{sfig:search_land_terrain}Bias-Variance tradeoff for different values of $\lambda$ with 400 datapoints}
+\end{figure}
+
+From Figure (\ref{fig:ridge_search_land_terrain}), it can be seen that the surface minimum of 0.17 is obtained at degree 13 with $\lambda = 10^{-9}$. This follows the results of both Figure (\ref{fig:EX6_1_OLS_fit}) and (\ref{fig:EX6_1_CV}), though again as when fitting the Franke Function this is to be expected as the regularization is minimally applied to Ridge resulting in a fit close to OLS. Though a more thorough analysis of Ridge could be performed as with OLS, we feel that due to the regularization being as minimal as it is, the analysis would essentially be a repeat of what was just done.
+
+Moving on to the Lasso search landscape in Figure (\ref{fig:lasso_search_land_terrain}), we see that the model performs considerably worse than both Ridge and OLS with the smallest obtained MSE being 0.37 at degree 9. This is interesting as degree 9 gave high MSE values for both OLS and Ridge. Though for OLS the MSE at degree 9 was reported to be approximately 19.5 in accordance to Figure (\ref{fig:EX6_1_CV}). To study wether Ridge could obtain a lower MSE than OLS, we perform a cross-validation for the optimal degree 6 over different values of $\lambda$. 
+
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.55]{figures/EX6_mse_cv_10_fold_lasso.pdf}
+  \caption{\label{fig:lasso_cv_terrain}Cross-validation of a single degree over different values of regularization}
+\end{figure}
+
+By inspecting Figure (\ref{fig:lasso_cv_terrain}), we see that the MSE would never reach values lower than approximately 0.35 as reported by the standard error interval. As such, Lasso does not seem to perform well on the terrain data, though it is to be noted that other degree-regularization combination could be tested to ensure that this is the case. Though for this analysis, we feel that it is satisfactory to fit the terrain data using OLS at degree 10. 
+
+\subsection*{Final conclusions}
+Throughout this exercise we have studied both synthetic data with the FrankeFunction, and real terrain data. For both datasets, we have concluded with OLS reporting the optimal MSE values, by studying how the MSE behaves both with and without resampling techniques. We have, unsurprisingly, found out that Ridge with minimal regularization performs slightly worse if not as well as OLS. Both our attempts at Lasso regression have not been fruitful, with it consequently reporting worse MSE values than both Ridge and OLS regression. Though our initial attempt with OLS may have been the most successful, we reiterate that this result was not given, by referring back to the No Free Lunch Theorem. Thus this project have demonstrated that no model is a priori the best for a given problem, and that a thorough analysis of different models have to be performed.
+
+To conclude, we want to add our thoughts to the purpose to our fitted model in regards to the terrain data. As we have seen, the resulting terrain-prediction tend to be a blurred and down-scaled version of the original picture. However, we believe that by fitting a regression model based on a sampled down version of a original photo, a compressed version of the original can be contained in just a set of model predictors. In practice, we have translated a lot of image information to a polynomial. The polynomial will also, based on its predictors, predict the values of the original photo which were lost during compression. In conclusion, our regression model can be used as an image compression algorithm, which saves space on the computer at the cost of image quality. 
 
 \newpage
 \newpage
