tentative final push

--- a/code/Exercise1.ipynb
+++ b/code/Exercise1.ipynb
@@ -357,6 +357,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Regarding the subpar Figure labels, we have not been able to determine when they were introduced. We refer to the report pdf for a earlier and correct rendition of the plot. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Repeat of the previous exercise, this time with foure times the amount of added noise. (0.05 -> 0.2)"
    ]
   },
@@ -530,10 +537,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "20551ddceb59dc51fa628b42bb2a7289171df926f90359af355cededb82457a3"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit ('in5520': conda)",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -546,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
