--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@
 % \setmathfont{STIX Two Math}
 
 \title{FYS-STK4155 - Project1}
-\author{Gard, Are, David Andreas Bordvik}
+\author{Gard Pavels Høivang, Are Frode Kvanum, David Andreas Bordvik}
 \date{\today}
 
 \begin{document}
