added github link

--- a/main.tex
+++ b/main.tex
@@ -1016,7 +1016,10 @@ By inspecting Figure (\ref{fig:lasso_cv_terrain}), we see that the MSE would nev
 \subsection*{Final conclusions}
 Throughout this exercise we have studied both synthetic data with the FrankeFunction, and real terrain data. For both datasets, we have concluded with OLS reporting the optimal MSE values, by studying how the MSE behaves both with and without resampling techniques. We have, unsurprisingly, found out that Ridge with minimal regularization performs slightly worse if not as well as OLS. Both our attempts at Lasso regression have not been fruitful, with it consequently reporting worse MSE values than both Ridge and OLS regression. Though our initial attempt with OLS may have been the most successful, we reiterate that this result was not given, by referring back to the No Free Lunch Theorem. Thus this project have demonstrated that no model is a priori the best for a given problem, and that a thorough analysis of different models have to be performed.
 
-To conclude, we want to add our thoughts to the purpose to our fitted model in regards to the terrain data. As we have seen, the resulting terrain-prediction tend to be a blurred and down-scaled version of the original picture. However, we believe that by fitting a regression model based on a sampled down version of a original photo, a compressed version of the original can be contained in just a set of model predictors. In practice, we have translated a lot of image information to a polynomial. The polynomial will also, based on its predictors, predict the values of the original photo which were lost during compression. In conclusion, our regression model can be used as an image compression algorithm, which saves space on the computer at the cost of image quality. 
+To conclude, we want to add our thoughts to the purpose to our fitted model in regards to the terrain data. As we have seen, the resulting terrain-prediction tend to be a blurred and down-scaled version of the original picture. However, we believe that by fitting a regression model based on a sampled down version of a original photo, a compressed version of the original can be contained in just a set of model predictors. In practice, we have translated a lot of image information to a polynomial. The polynomial will also, based on its predictors, predict the values of the original photo which were lost during compression. In conclusion, our regression model can be used as an image compression algorithm, which saves space on the computer at the cost of image quality.
+
+\section*{Appendix}
+Link to github repository containing all developed code for this project: \href{https://github.com/AndreasBordvik/FYS-STK4155-Prj1_report}{GitHub}
 
 \newpage
 \newpage
